tests/out/error/method/field_and_method.in.bt
struct Cmd {
	exec fun ()
}

fun (c Cmd) exec() {}
