tests/out/error/method/field_and_method.out
tests/out/error/method/field_and_method.in.bt:5:0 error: struct has a field and method named exec
